--- a/css/common.css
+++ b/css/common.css
@@ -93,7 +93,7 @@ header {
   height: 6rem;
   padding: 0 2%;
   box-sizing: border-box;
-  z-index: 999;
+  z-index: 50;
   background-color: rgba(255, 255, 255, 0.2);
   border-bottom: 1px solid #ccc;
   -webkit-backdrop-filter: blur(5px);
@@ -402,6 +402,7 @@ header ol .nav-item a .nav-text {
 }
 .full-wrap .article-box.pf-exprience {
   width: 80%;
+  height: 100vh;
   min-height: 100%;
   margin: 0 auto;
   padding: 7rem 0 10rem 0;
