--- a/css/common.scss
+++ b/css/common.scss
@@ -70,7 +70,7 @@ header {
     height: 6rem;
     padding: 0 2%;
     box-sizing: border-box;
-    z-index: 999;
+    z-index: 50;
     background-color: rgb(255 255 255 / 20%);
     border-bottom: 1px solid #ccc;
     backdrop-filter: blur(5px);
@@ -353,6 +353,7 @@ header {
 
         &.pf-exprience {
             width: 80%;
+            height: 100vh;
             min-height: 100%;
             margin: 0 auto;
             padding: 7rem 0 10rem 0;
