--- a/css/common.css
+++ b/css/common.css
@@ -138,6 +138,21 @@ header ol .nav-item a .nav-text {
   font-weight: 400;
 }
 
+.progress {
+  position: fixed;
+  top: 6rem;
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  border: 0;
+  z-index: 51;
+}
+.progress .bar {
+  background-color: #000;
+  height: 2px;
+  transition: 0.2s;
+}
+
 #wrap {
   width: 100%;
   height: 100%;
@@ -267,7 +282,7 @@ header ol .nav-item a .nav-text {
   display: block;
 }
 .full-wrap .article-box.pf-main .intro-text-wrap {
-  padding-top: 30rem;
+  padding-top: 20rem;
   color: #fff;
 }
 .full-wrap .article-box.pf-intro {
@@ -631,8 +646,18 @@ header ol .nav-item a .nav-text {
   hr {
     margin: 2vw 0;
   }
+  header {
+    height: 5rem;
+    padding: 0 3%;
+  }
+  header .logo-link {
+    font-size: 2rem;
+  }
   header nav {
     display: none;
+  }
+  .progress {
+    top: 5rem;
   }
   .verticle-line {
     display: none;
