--- a/css/common.scss
+++ b/css/common.scss
@@ -128,6 +128,22 @@ header {
     }
 }
 
+.progress {
+    position: fixed;
+    top: 6rem;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    border: 0;
+    z-index: 51;
+
+    .bar {
+        background-color: #000;
+        height: 2px;
+        transition: .2s;
+    }
+}
+
 #wrap {
     width: 100%;
     height: 100%;
@@ -199,7 +215,7 @@ header {
             // box-shadow: inset 0px 0px 50px 0px grey;
 
             .intro-text-wrap {
-                padding-top: 30rem;
+                padding-top: 20rem;
                 color: #fff;
             }
         }
@@ -656,9 +672,20 @@ header {
     }
 
     header {
+        height: 5rem;
+        padding: 0 3%;
+
+        .logo-link {
+            font-size: 2rem;
+        }
+
         nav {
             display: none;
         }
+    }
+
+    .progress {
+        top: 5rem;
     }
 
     .verticle-line {
