--- a/css/common.css
+++ b/css/common.css
@@ -275,18 +275,79 @@ header .frame {
     opacity: 0;
   }
 }
+/* Animation */
+.parallax > use {
+  -webkit-animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+          animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+}
+
+.parallax > use:nth-child(1) {
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s;
+}
+
+.parallax > use:nth-child(2) {
+  -webkit-animation-delay: -3s;
+          animation-delay: -3s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+.parallax > use:nth-child(3) {
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
+  -webkit-animation-duration: 13s;
+          animation-duration: 13s;
+}
+
+.parallax > use:nth-child(4) {
+  -webkit-animation-delay: -5s;
+          animation-delay: -5s;
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s;
+}
+
+@-webkit-keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
+
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
 .full-wrap .article-box.pf-main {
   position: relative;
   width: 100%;
   height: 100%;
   z-index: 10;
-  background: url("../image/back5.jpg") #c0c0c0 top center fixed no-repeat;
-  background-size: cover;
+  background-color: #000;
   display: block;
 }
 .full-wrap .article-box.pf-main .intro-text-wrap {
-  padding-top: 20rem;
   color: #fff;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.full-wrap .article-box.pf-main .waves {
+  bottom: 0;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  height: 15vh;
 }
 .full-wrap .article-box.pf-intro {
   width: 70%;
