--- a/css/common.scss
+++ b/css/common.scss
@@ -207,6 +207,42 @@ header {
     }
 }
 
+/* Animation */
+
+.parallax>use {
+    animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
+}
+
+.parallax>use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+}
+
+.parallax>use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+}
+
+.parallax>use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+}
+
+.parallax>use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+}
+
+@keyframes move-forever {
+    0% {
+        transform: translate3d(-90px, 0, 0);
+    }
+
+    100% {
+        transform: translate3d(85px, 0, 0);
+    }
+}
+
 .full-wrap {
     .article-box {
         &.pf-main {
@@ -214,14 +250,28 @@ header {
             width: 100%;
             height: 100%;
             z-index: 10;
-            background: url('../image/back5.jpg') #c0c0c0 top center fixed no-repeat;
-            background-size: cover;
+            // background: url('../image/back5.jpg') #c0c0c0 top center fixed no-repeat;
+            // background-size: cover;
+            background-color: #000;
             display: block;
             // box-shadow: inset 0px 0px 50px 0px grey;
 
             .intro-text-wrap {
-                padding-top: 20rem;
+                // padding-top: 30rem;
                 color: #fff;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+            }
+
+            .waves {
+                bottom: 0;
+                position: absolute;
+                width: 100%;
+                left: 0;
+                height: 15vh;
             }
         }
 
@@ -830,6 +880,11 @@ header {
 
     .full-wrap {
         .article-box {
+            &.pf-main {
+                .waves {
+                }
+            }
+
             &.pf-intro {
                 width: 90%;
                 padding: 3rem 0;
